debian-installer-utils (0.39) UNRELEASED; urgency=low

  * Peter Mann
    - Initial Slovak translation (sk.po).
  * Kęstutis Biliūnas
    - Updated Lithuanian translation.
  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Ilgiz Kalmetev
    - Updated Russian translation.

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 21:59:02 -0500

debian-installer-utils (0.38) unstable; urgency=low

  * Petter Reinholdtsen
    - Fix typo in tr.po.
    - Make templates for di-utils-exit-installer and
      di-utils-reboot translatable.
    - Updated Norwegian Bokmål (nb.po).
  * Tommi Vainikainen
    - Updated Finnish translation.
  * Christian Perrier
    - Update French translation.
  * Miroslav Kure
    - Update Czech translation.
  * Update pt_BR (Brazilian Portuguese) translation.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Updated Dutch translation (nl.po)

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 21:49:02 -0500

debian-installer-utils (0.37) unstable; urgency=low

  * Joey Hess
    - di-utils-reboot: If the user chooses not to reboot, exit with 30,
      to avoid making main-menu decide to jump to high priority mode
    - di-utils-shell: support backup and improve template
  *  Kęstutis Biliūnas 
    - Update Lithuanian translation.

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 22:00:46 -0500

debian-installer-utils (0.36) unstable; urgency=low

  * Joey Hess
    - Change di-utils-reboot to priority standard to match overrides.
    - Reupload with correct distribution. Closes: #218583
  * Safir Secerovic, Amila Akagic
    - Add Bosnian translation (bs.po).

 -- Joey Hess <joeyh@debian.org>  Sat,  1 Nov 2003 11:24:01 -0500

debian-installer-utils (0.35) unstable; urgency=low

  Alastair McKinstry
   - Move di-utils-terminfo build bits into binary-indep. 
  Joey Hess
   - Changed priority of di-utils-exit-installer to extra so it does not
     show up on real installs. (Will need an override though.)