@@ -41,3 +41,11 @@ Description: Utilities for the debian installer boot floppy.
 Package: di-utils-terminfo
 Architecture: all
 Description: Terminfo entries needed by newt/slang in debian installer.
+
+Package: di-utils-devicefiles
+Architecture: all
+Description: Minimal device  files required for debian installer.
+ This module provides a minimal set of device files required by
+ debian-installer. These are required by systems that are not
+ using devfs (or potentially udev).
+
