@@ -34,6 +34,7 @@ binary-indep: build
 	  mkdir -p debian/di-utils-terminfo/`dirname $$file`; \
           cp -a $$file debian/di-utils-terminfo/$$file; \
         done
+	$(MAKE) devicefiles  DEVDIR=debian/di-utils-devicefiles
 	dh_installdeb -i
 	$(foreach PACKAGE, $(INDEP_PACKAGES), \
 	  dh_gencontrol -p $(PACKAGE) -- -n$(PACKAGE)_$(VERSION)_all.udeb; \
